--- a/Stage_02/Projeto01/index.html
+++ b/Stage_02/Projeto01/index.html
@@ -15,7 +15,7 @@
   <div id="hero">
     <img 
       src="images/img1.jpg" 
-      alt="Desenho de uma pessoa vestinho uma camisa amarela em uma sala com móveis">
+      alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis">
 
     <h1>Ambientes <span>únicos</span>  para você!</h1>
     <p>
@@ -27,8 +27,7 @@
       Tenha <span>ambientes limpos</span> e bem decorados, 
       transmitindo <strong>elegância  e finesse</strong> para todo
       aquele que estiver ali.
-    </p>
-    
+    </p>   
   </div>
 
   <div id="footer">
@@ -37,7 +36,6 @@
     <a target="_blank" href="https://instagram.com/moveisparavoce">
         Instagram
     </a>
-    
     <a href="mailto:contato@moveisparavoce.com">
       Fale conosco
     </a>
