--- a/Stage_02/Código_do_desafio_Fase_02/index.html
+++ b/Stage_02/Código_do_desafio_Fase_02/index.html
@@ -38,7 +38,7 @@
               Comece já
             </button>
           </section>
-          <img src="images/img.png" alt="Desenho de uma mulher pulando corta numa academia.">
+          <img src="images/img.png" alt="Desenho de uma mulher pulando corda numa academia.">
       </main>
       <footer>
           fale conosco no instagram <a href="https://instagram.com/treineme" target="_blank">@treine.me</a>
