--- a/Stage_05/IMC/index.html
+++ b/Stage_05/IMC/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css"> 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
-  <script src="./script.js"></script>
+  <script src="./js/script.js" defer type="module"></script>
 </head>
 <body>
 
@@ -18,15 +18,15 @@
   </div>
   <div class="container">
     <main class="card">
-      <form action="">
+      <form>
         <h1 class="title">Cálculo de IMC</h1>
         <div class="input-wrapper">
           <label for="weight">Peso (kg)</label>
-          <input type="text" id="weight" placeholder="60" />
+          <input id="weight" type="text" placeholder="60" />
         </div>
         <div class="input-wrapper">
-          <label for="height">Altura (m)</label>
-          <input type="text" id="height" placeholder="165" />
+          <label for="height">Altura (cm)</label>
+          <input id="height" type="text" placeholder="165" />
         </div>
 
         <button type="submit">
@@ -40,12 +40,13 @@
   <div class="modal-wrapper">
     <div class="modal card">
       <h2 class="title">
+
         <button class="close">
           <img src="./assets/close.svg" alt="imagem de X para fechar o popup">
         </button>
-        Seu IMC é de 28
+        <span>Seu IMC é de 28</span>
       </h2>
-      <button class="close"></button>
+      
     </div>
   </div>
   
